--- a/finder-files-organizer/Cargo.toml
+++ b/finder-files-organizer/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 
+[dev-dependencies]
+tempfile = "3.9"
+
 [[bin]]
 name = "finder-files-organizer"
 path = "src/main.rs"
